# smart-space-lighting-system

./: .gitignore  README.md
firmware/pico/: .gitignore  CMakeLists.txt  freeRTOSConfig.h  main.c  ws2812.pio
linux/daemon/: lighting_daemon.c
linux/kernel-module/presence_km/: Makefile  presence.c
linux/kernel-module/uart_hub_km/: Makefile  uart_hub.c
web/: server.js
web/public/: index.html
